--- a/src/ElasticsearchRecipes/wwwroot/index.html
+++ b/src/ElasticsearchRecipes/wwwroot/index.html
@@ -15,10 +15,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
 
-    <script type="text/javascript" src="./App.js"></script>
-    <script type="text/javascript" src="./Routes.js"></script>
-    <script type="text/javascript" src="./Services/RecipeService.js"></script>
-    <script type="text/javascript" src="./Controllers/SearchController.js"></script>
+    <script type="text/javascript" src="/App.js"></script>
+    <script type="text/javascript" src="/Routes.js"></script>
+    <script type="text/javascript" src="/Services/RecipeService.js"></script>
+    <script type="text/javascript" src="/Controllers/SearchController.js"></script>
 </body>
 
 </html>
