Modified the Angular app a bit.

--- a/src/ElasticsearchRecipes/wwwroot/index.html
+++ b/src/ElasticsearchRecipes/wwwroot/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/App.js"></script>
     <script type="text/javascript" src="/Routes.js"></script>
     <script type="text/javascript" src="/Services/RecipeService.js"></script>
+    <script type="text/javascript" src="/Controllers/RecipeController.js"></script>
     <script type="text/javascript" src="/Controllers/SearchController.js"></script>
 </body>
 
