--- a/src/ElasticsearchRecipes/wwwroot/index.html
+++ b/src/ElasticsearchRecipes/wwwroot/index.html
@@ -14,6 +14,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
 
     <script type="text/javascript" src="/App.js"></script>
     <script type="text/javascript" src="/Routes.js"></script>
