Added pagination (using ui.bootstrap). Added a MoreLikeThis link on each recipe. On the API side, the DataIndexer class now maxes out max_result_window before indexing any data, so you can have pagination for >100 pages.

--- a/src/ElasticsearchRecipes/wwwroot/index.html
+++ b/src/ElasticsearchRecipes/wwwroot/index.html
@@ -6,6 +6,7 @@
     <title>Elasticsearch Recipes</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.css" />
 </head>
 <body>
     <div ng-app="app">
@@ -14,7 +15,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.js"></script>
 
     <script type="text/javascript" src="/App.js"></script>
     <script type="text/javascript" src="/Routes.js"></script>
