Switched from almighty-autocomplete to uib-typeahead.

--- a/src/ElasticsearchRecipes/wwwroot/index.html
+++ b/src/ElasticsearchRecipes/wwwroot/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="/Routes.js"></script>
     <script type="text/javascript" src="/Services/RecipeService.js"></script>
     <script type="text/javascript" src="/Controllers/MainController.js"></script>
+    <script type="text/javascript" src="/Controllers/DetailsController.js"></script>
     <script type="text/javascript" src="/Controllers/SearchController.js"></script>
     <script type="text/javascript" src="/Controllers/MoreLikeThisController.js"></script>
 </body>
